--- a/www/style.css
+++ b/www/style.css
@@ -51,9 +51,6 @@ body{
 
 #list{
     overflow-y: auto;
-    display: flex;
-    flex-flow: column;
-    justify-content: end;
 }
 
 #controls{
@@ -65,7 +62,16 @@ body{
     flex-flow: column;
     gap: 0.5em;
     padding: 0.5em;
-    margin: 0.5em;
+    margin: 1em;
     border-radius: 0.5em;
     background-color: #333;
+}
+
+.clickable{
+    cursor: pointer;
+}
+
+.time{
+    display: flex;
+    gap: 0.5em;
 }
